--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "private": true,
-    "name": "git-fetch-upstream",
+    "name": "git-fetch-upstream-action",
     "version": "0.0.0-semantically-released",
     "author": {
       "name": "RekGRpth",
       "email": "RekGRpth@gmail.com",
-      "url": "https://github.com/RekGRpth/git-fetch-upstream"
+      "url": "https://github.com/RekGRpth/git-fetch-upstream-action"
     },
     "license": "MIT",
     "dependencies": {
