--- a/action.yml
+++ b/action.yml
@@ -19,12 +19,11 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: |
-        set -eux
-        export INPUTS_BRANCH="${{ inputs.branch }}"
-        export INPUTS_EMAIL="${{ inputs.email }}"
-        export INPUTS_NAME="${{ inputs.name }}"
-        export INPUTS_REPOSITORY="${{ inputs.repository }}"
-        export INPUTS_URL="${{ inputs.url }}"
-        "${GITHUB_ACTION_PATH}/action.sh"
+    - env:
+        INPUTS_BRANCH: ${{ inputs.branch }}
+        INPUTS_EMAIL: ${{ inputs.email }}
+        INPUTS_NAME: ${{ inputs.name }}
+        INPUTS_REPOSITORY: ${{ inputs.repository }}
+        INPUTS_URL: ${{ inputs.url }}
+      run: "${GITHUB_ACTION_PATH}/action.sh"
       shell: sh
