--- a/action.yml
+++ b/action.yml
@@ -26,3 +26,4 @@ runs:
         INPUTS_REPOSITORY: ${{ inputs.repository }}
         INPUTS_URL: ${{ inputs.url }}
       run: "${GITHUB_ACTION_PATH}/action.sh"
+      shell: sh
